<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:elevation="10dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/welcome"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_welcome2"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:elevation="10dp"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center_horizontal"
        android:text="@string/description"
        android:textColor="@color/textColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_recipeBook" />

    <TextView
        android:id="@+id/textView_recipeBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="10dp"
        android:textSize="25sp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/recipeBook"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:backgroundTint="@color/orange"
        android:elevation="10dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_recipeBook" />

    <Button
        android:id="@+id/buttonRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/softerOrange"
        android:elevation="10dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/buttonRegistration"
        android:textSize="10sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mushroom" />

    <ImageView
        android:id="@+id/imageViewBackground2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/mushroom" />

    <ImageView
        android:id="@+id/imageViewBackground3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/corrots" />

    <ImageView
        android:id="@+id/imageViewBackground4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/corrots" />

    <ImageView
        android:id="@+id/imageViewBackground5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackground4"
        app:srcCompat="@drawable/eggplant" />

    <ImageView
        android:id="@+id/imageViewBackground6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="156dp"
        android:rotation="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackground"
        app:srcCompat="@drawable/vegetable" />

    <ImageView
        android:id="@+id/imageViewBackground7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="168dp"
        android:rotation="30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackground6"
        app:srcCompat="@drawable/champignon" />

    <ImageView
        android:id="@+id/imageViewBackground8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="228dp"
        android:rotation="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackground6"
        app:srcCompat="@drawable/eggplant" />


</androidx.constraintlayout.widget.ConstraintLayout>